# WTE-App

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: CODEX-FORMAT.md  NETPLAY.md  PUBLISH-SETUP.md  RELEASING.md
public/: sheet.html  vtt.html
scripts/: bump.mjs
server/: README.md
server/signaling/: index.js  package.json  test.js  wte-signal.service
server/turn/: turnserver.conf
src/: App.tsx  index.html  sheet.html  styles.css  vite-env.d.ts  vtt.html  wiki.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  net.rs
src/components/: CampaignDesk.tsx  CampaignPicker.tsx  CursorDot.tsx  Dashboard.tsx  FirstRun.tsx  LobbyView.tsx  ProfileMenu.tsx  ToolFrame.tsx  TopBar.tsx
src/game/: abilityActions.test.ts  abilityActions.ts  attrCompensation.test.ts  derivedTable.test.ts  dice.test.ts  incepts.test.ts  inventory.test.ts  inventory.ts  negotiation.test.ts  negotiation.ts  overrides.test.ts  remnant.test.ts  sizeClasses.test.ts  species.test.ts  synapticFocus.test.ts  synapticFocus.ts  wte.ts
src/lib/: appToast.ts  audioPrefs.ts  campaignDesk.ts  campaignRules.test.ts  campaignRules.ts  charFolders.test.ts  charFolders.ts  charShare.test.ts  charShare.ts  characters.ts  cinePresets.ts  codex.ts  codexParse.ts  codexRoles.ts  db.ts  gameData.test.ts  gameData.ts  image.ts  legacyImport.test.ts  legacyImport.ts  md.ts  notes.ts  repo.ts  (+13 more)
(+161 files in other folders)
