[package]
name = "wte-app"
version = "0.8.11"
description = "W.T.E — unified Character Sheet + VTT"
authors = ["ZetaMurdock"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
urlencoding = "2"
ureq = { version = "2", features = ["json"] }
zip = "0.6"
mdns-sd = "0.11"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
